<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteOpacity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="192dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/purple_700"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/appBarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@android:string/defaultMsisdnAlphaTag"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/sym_def_app_icon"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="?attr/homeAsUpIndicator" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:behavior_overlapTop="32dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@android:string/defaultMsisdnAlphaTag"
                        android:maxWidth="150dp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtTitleDetail"
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="40dp"
                        app:layout_constraintEnd_toEndOf="@+id/btnLike"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/favorite" />

                    <ToggleButton
                        android:id="@+id/btnLike"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/favorite_toggle"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:textOff=""
                        android:textOn=""
                        app:layout_constraintBottom_toTopOf="@+id/txtRating"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/txtTitleDetail" />

                    <ImageView
                        android:id="@+id/imgRating"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@android:string/defaultMsisdnAlphaTag"
                        android:src="@android:drawable/star_off"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/txtTitleDetail" />

                    <TextView
                        android:id="@+id/txtRating"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/imgRating"
                        app:layout_constraintStart_toEndOf="@+id/imgRating"
                        app:layout_constraintTop_toTopOf="@+id/imgRating"
                        tools:text="@string/app_name" />

                    <ImageView
                        android:id="@+id/imgVote"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@android:string/defaultMsisdnAlphaTag"
                        android:src="@android:drawable/ic_menu_compass"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/imgRating" />

                    <TextView
                        android:id="@+id/txtVote"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/imgVote"
                        app:layout_constraintStart_toEndOf="@+id/imgVote"
                        app:layout_constraintTop_toTopOf="@+id/imgVote"
                        tools:text="@string/app_name" />

                    <ImageView
                        android:id="@+id/imgDate"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@android:string/defaultMsisdnAlphaTag"
                        android:src="@android:drawable/ic_menu_agenda"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/imgVote" />

                    <TextView
                        android:id="@+id/txtDate"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/imgDate"
                        app:layout_constraintStart_toEndOf="@+id/imgDate"
                        app:layout_constraintTop_toTopOf="@+id/imgDate"
                        tools:text="@string/favorite" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:text="@string/overview" />

                        <TextView
                            android:id="@+id/txtContent"
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            style="@style/Base.TextAppearance.AppCompat.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:text="@string/trailer" />

                        <TextView
                            android:id="@+id/txtTrailerContent"
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/progressLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/could_not_be_load"
            app:layout_constraintEnd_toEndOf="@+id/btnRetry"
            app:layout_constraintStart_toStartOf="@+id/btnRetry"
            app:layout_constraintTop_toBottomOf="@+id/progressLoading" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>